--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="d4w is an app designed to help you dress for the weather. It is set up to be used as an icon from your mobile device's home screen."/>
+    <meta name="description" content="Boilerplate code for a PWA"/>
     <link rel="manifest" href="/js/manifest.json">
     <link rel="apple-touch-icon" href="/images/maskable-icon-512.png" />
     <base href="./">
-    <title>d4w, An app to help you dress for the weather!</title>
+    <title>PWA Boilerplate</title>
 <!--     <script src="./js/installer.js"></script> -->
 </head>
   <link rel="stylesheet" href="styles/main.css">
@@ -34,17 +34,18 @@
         }
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
-    <script type="text/javascript" src="./sketch.js"></script>
+    <script type="text/javascript" src="./js/sketch.js"></script>
 
   <body>
-    <div id="sketch-holder">
+    <div id="sketch-holder"></div>
 
-    </div>
-
-    <img class="app-icon"
-         width="90px" height="90px"
+    <div class="app-icon">
+      <img width="90px" height="90px"
          src="/images/maskable-icon.png"
          alt="A boilerplate app for a Progressive Web App">
+    </div>
+    <div>
     <button id="add-button">Add to home screen</button>
+  </div>
   </body>
 </html>
