--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Boilerplate code for a PWA"/>
+    <meta name="description" content="Boilerplate code for a PWA with p5.js."/>
+
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <link rel="stylesheet" href="/styles/style.css">
     <link rel="manifest" href="/js/manifest.json">
-    <link rel="apple-touch-icon" href="/images/maskable-icon-512.png" />
     <base href="./">
-    <title>PWA Boilerplate</title>
-<!--     <script src="./js/installer.js"></script> -->
+
+    <title>ReCode PWA Boilerplate</title>
+
+    <script src="/js/adhs-installer.js"></script>
 </head>
-  <link rel="stylesheet" href="styles/main.css">
+
   <script>
         // register service worker
-
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                .register('sw.js', { scope: '/' })
+                .register('sw.js')
                 .then(function (reg) {
                     if (reg.installing) {
                         console.log('Service worker installing');
@@ -34,18 +39,21 @@
         }
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
-    <script type="text/javascript" src="./js/sketch.js"></script>
+    <script type="text/javascript" src="/js/sketch.js"></script>
 
   <body>
-    <div id="sketch-holder"></div>
 
-    <div class="app-icon">
-      <img width="90px" height="90px"
-         src="/images/maskable-icon.png"
-         alt="A boilerplate app for a Progressive Web App">
+    <div id="app">
+      <div id="installer">
+        <div class="app-icon">
+          <img width="90px" height="90px" src="/images/apple-touch-icon.png" alt="A boilerplate app for a Progressive Web App">
+        </div>
+        <div>
+          <input id="a2hs-button" value="Install this app!" type="button"></input>
+        </div>
+      <div id="sketch-holder"></div>
     </div>
-    <div>
-    <button id="add-button">Add to home screen</button>
-  </div>
+    
+
   </body>
 </html>
