--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>ReCode PWA Boilerplate</title>
 
-    <script src="/js/adhs-installer.js"></script>
+    <script src="/js/a2hs-installer.js"></script>
 </head>
 
   <script>
