--- a/index.html
+++ b/index.html
@@ -1,59 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <title>ReCode PWA Boilerplate</title>
+    <!-- Various metadata for our app -->
     <meta name="description" content="Boilerplate code for a PWA with p5.js."/>
-
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="manifest" href="/js/manifest.json">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="manifest" href="./manifest.json">
     <base href="./">
 
-    <title>ReCode PWA Boilerplate</title>
+    <script type="text/javascript" src="./p5.min.js"></script>
+    <script type="text/javascript" src="./sketch.js"></script>
 
-    <script src="/js/a2hs-installer.js"></script>
-</head>
-
-  <script>
-        // register service worker
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker
-                .register('sw.js')
-                .then(function (reg) {
-                    if (reg.installing) {
-                        console.log('Service worker installing');
-                    } else if (reg.waiting) {
-                        console.log('Service worker installed');
-                    } else if (reg.active) {
-                        console.log('Service worker active');
-                    }
-                })
-                .catch(function (error) {
-                    // registration failed
-                    console.log('Registration failed with ' + error);
-                });
-        }
-    </script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
-    <script type="text/javascript" src="/js/sketch.js"></script>
+  </head>
 
   <body>
-
-    <div id="app">
-      <div id="installer">
-        <div class="app-icon">
-          <img width="90px" height="90px" src="/images/apple-touch-icon.png" alt="A boilerplate app for a Progressive Web App">
-        </div>
-        <div>
-          <input id="a2hs-button" value="Install this app!" type="button"></input>
-        </div>
+    <script>
+      // register service worker
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker
+            .register('./sw.js')
+            .then(function (reg) {
+              if (reg.installing) {
+                console.log('Service worker installing');
+              } else if (reg.waiting) {
+                console.log('Service worker installed');
+              } else if (reg.active) {
+                console.log('Service worker active');
+              }
+            })
+            .catch(function (error) {
+              // registration failed
+              console.log('Registration failed with ' + error);
+            });
+        }
+    </script>
       <div id="sketch-holder"></div>
-    </div>
-    
-
   </body>
 </html>
